nginx1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx1-ingress
  namespace: nginx1
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/issuer: "selfsigned"
spec:
  rules:
  - host: "local.nginx"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx1-svc 
            port:
              number: 80 
  tls:
  - hosts:
    - local.nginx
    secretName: nginx1-tls-secret
